--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -65,6 +65,13 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".Info"
+            android:screenOrientation="portrait">
+            <intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
 
     </application>
 
